adding ui interface.Account List

--- a/forms/ui/custom/accountList.ui
+++ b/forms/ui/custom/accountList.ui
@@ -18,6 +18,16 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Список аккаунтов</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QListWidget" name="listWidget"/>
+   </item>
+   <item>
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Лог бота</string>
