UI interface.add new models and refactoring creating ui forms

--- a/forms/ui/account.ui
+++ b/forms/ui/account.ui
@@ -997,9 +997,7 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../../../resourses.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>radioButton_3</sender>
